# csv2latex_gui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: flet_pack.yml  release.yml  test_release.yml
