[project]
name = "csv2latex-gui"
version = "0.2.0"
description = "Convert CSV/Excel files to LaTeX tables"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Luigi Palumbo" }
]
dependencies = [
    "flet>=0.80.5",
    "pandas>=3.0.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop>=0.80.5",
    "pyinstaller>=6.19.0",
]

[tool.flet]
org = "com.randomds"
product = "csv2latex-gui"
company = "RandomDataScience"
copyright = "Copyright (C) 2022-2026 by RandomDataScience"

[tool.flet.app]
path = "."
